<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar" translatable="false">Post author avatar</string>
    <string name="description_post_menu" translatable="false">Post menu</string>
    <string name="description_shears_icon" translatable="false">Shears icon</string>
    <string name="description_views_icon" translatable="false">Views icon</string>
    <string name="description_likes_icon" translatable="false">Likes icon</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="save_icon" translatable="false">Save icon</string>
    <string name="close_icon" translatable="false">Close icon</string>
    <string name="edit_icon" translatable="false">Edit icon</string>
    <string name="post_text">Post text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="short_content">Post short content…</string>
    <string name="edit_message">Edit message</string>
    <string name="chooser_sharing_post">Sharing text</string>
    <string name="play_video">Play video</string>
    <string name="video_preview">Video preview</string>
    <string name="google_api_unavailability">Google Api unavailability</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_new_post">%1$s posted new post: %2$s</string>
    <string name="new_notification">New notification: %1$s</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="no_posts">No posts</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">RETRY</string>
    <string name="base_url" translatable="false">"http://10.0.2.2:9999/api/slow/posts"</string>
    <string name="attachment_image">Attachment image</string>
    <string name="error_loading">Error loading data</string>
    <string name="error_login">"Couldn't log in to the app!"</string>
    <string name="retry_loading">Retry</string>
    <string name="new_posts">New posts (%1$s)</string>
    <string name="save">Save</string>
    <string name="remove">REMOVE</string>
    <string name="description_photo">Description photo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="password2">Password 2</string>
    <string name="login">Login</string>
    <string name="login_button">LOGIN</string>
    <string name="name">Name</string>
    <string name="send">SEND</string>
    <string name="required">Required</string>
    <string name="psw_not_match">"Passwords don't match"</string>
    <string name="exit_confirmation_title">Are you sure?</string>
    <string name="exit_confirmation_message">There is an unfinished post in the draft.</string>
    <string name="exit">EXIT</string>
    <string name="no">NO</string>
    <string name="period">Period</string>
    <string name="last_week">Last week</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>

</resources>